[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/button_big/bouton_normal.png" type="Texture" id=2]
[ext_resource path="res://assets/button_big/bouton_focused.png" type="Texture" id=3]
[ext_resource path="res://assets/button_big/bouton_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/button_big/bouton_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/button_big/bouton_disabled.png" type="Texture" id=6]
[ext_resource path="res://fonts/font_big.tres" type="DynamicFont" id=7]

[sub_resource type="Animation" id=1]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("cont/button_resume:rect_position:x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -248.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cont/button_settings:rect_position:x")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -248.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cont/button_quit:rect_position:x")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -248.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "option"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("cont/button_resume:rect_position:x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -160.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cont/button_settings:rect_position:x")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -160.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cont/button_quit:rect_position:x")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -160.0 ]
}

[node name="menu" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="menu"]
autoplay = "open"
playback_speed = 2.0
anims/open = SubResource( 1 )
anims/option = SubResource( 2 )

[node name="cont" type="VBoxContainer" parent="menu"]
anchor_bottom = 1.0
margin_right = 241.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_resume" type="TextureButton" parent="menu/cont"]
margin_left = -248.0
margin_top = 50.0
margin_right = -7.0
margin_bottom = 102.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 3 )
stretch_mode = 2

[node name="label" type="Label" parent="menu/cont/button_resume"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_settings" type="TextureButton" parent="menu/cont"]
margin_left = -248.0
margin_top = 118.0
margin_right = -7.0
margin_bottom = 170.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 3 )
stretch_mode = 2

[node name="label" type="Label" parent="menu/cont/button_settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_quit" type="TextureButton" parent="menu/cont"]
margin_left = -248.0
margin_top = 186.0
margin_right = -7.0
margin_bottom = 238.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 3 )
stretch_mode = 2

[node name="label" type="Label" parent="menu/cont/button_quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="menu/anim" to="." method="_on_anim_animation_finished"]
[connection signal="pressed" from="menu/cont/button_resume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="menu/cont/button_settings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="menu/cont/button_quit" to="." method="_on_button_quit_pressed"]
